--- a/module2-solution/css/styles.css
+++ b/module2-solution/css/styles.css
@@ -1,4 +1,4 @@
 /********** Base styles **********/
-#content {
-  background-color: #90EE90; /* green */
+body {
+  background-color: powderblue;
 }
