--- a/module2-solution/css/styles.css
+++ b/module2-solution/css/styles.css
@@ -1,5 +1,38 @@
-/********** Base styles **********/
+<!DOCTYPE html>
+<html>
+  
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" type="text/css" href="css/styles.css">
+  <title>Module 2 Solution</title>
+</head>
+  
+<body>
+  <h1>Our Menu</h1>
 
-.content{
-  background-color: #7d7973;
-}
+  <div class="row"> 
+    <div class="content col-lg-4 col-md-6 col-sm-12">
+    	<section>
+    	<div class="section_cat">Chicken</div>
+    	<div class="info">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Suscipit error quis ab perspiciatis eos inventore recusandae iste itaque numquam facilis, tenetur. Doloribus officiis quae facilis, nisi, ex similique. Animi, perferendis.Lorem ipsum dolor sit amet, consectetur adipisicing elit. Suscipit error quis ab perspiciatis eos inventore recusandae iste itaque numquam facilis, tenetur. Doloribus officiis quae facilis, nisi, ex similique. Animi, perferendis.</div>
+    	</section>
+    </div>
+
+    <div class="content col-lg-4 col-md-6 col-sm-12">
+    	<section>
+    	<div class="section_cat">Beef</div>
+    	<div class="info">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Suscipit error quis ab perspiciatis eos inventore recusandae iste itaque numquam facilis, tenetur. Doloribus officiis quae facilis, nisi, ex similique. Animi, perferendis.</div>
+    	</section>
+    </div>
+    
+    <div class="content col-lg-4 col-md-12 col-sm-12">
+    	<section>
+    	<div class="section_cat">Sushi</div>
+    	<div class="info">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Suscipit error quis ab perspiciatis eos inventore recusandae iste itaque numquam facilis, tenetur. Doloribus officiis quae facilis, nisi, ex similique. Animi, perferendis.Doloribus officiis quae facilis, nisi, ex similique. Animi, perferendis.Doloribus officiis quae facilis, nisi, ex similique. Animi, perferendis.Doloribus officiis quae facilis, nisi, ex similique. Animi, perferendis.</div>
+    	</section>
+    </div>
+    
+  </div>
+ 
+</body>
